WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117317
[BlackBerry] Crash in InRegionScrollerPrivate::clearDocumentData
https://bugs.webkit.org/show_bug.cgi?id=117317
Summary
[BlackBerry] Crash in InRegionScrollerPrivate::clearDocumentData
gmak
Reported
2013-06-06 13:23:05 PDT
Patch for
https://bugs.webkit.org/show_bug.cgi?id=117276
causes crash.
Attachments
Patch with changelog
(2.43 KB, patch)
2013-06-06 13:29 PDT
,
gmak
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
gmak
Comment 1
2013-06-06 13:29:12 PDT
Created
attachment 203962
[details]
Patch with changelog
Rob Buis
Comment 2
2013-06-06 13:30:34 PDT
Comment on
attachment 203962
[details]
Patch with changelog Makes sense.
WebKit Commit Bot
Comment 3
2013-06-06 13:49:37 PDT
Comment on
attachment 203962
[details]
Patch with changelog Clearing flags on attachment: 203962 Committed
r151289
: <
http://trac.webkit.org/changeset/151289
>
WebKit Commit Bot
Comment 4
2013-06-06 13:49:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug