[BlackBerry] Crash in InRegionScrollerPrivate::clearDocumentData https://bugs.webkit.org/show_bug.cgi?id=117317

Patch by Genevieve Mak <gmak@rim.com> on 2013-06-06
Reviewed by Rob Buis.

PR #348994
Need to check the scrollableArea instead of asserting because in this case for the
selection subframe it is allowed to be null.

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::clearDocumentData):

Canonical link: https://commits.webkit.org/135561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151289 268f45cc-cd09-0410-ab3c-d52691b4dbfc